--- a/public/src/components/app/AuthApp.css
+++ b/public/src/components/app/AuthApp.css
@@ -15,3 +15,30 @@ main p.switch, main p.errors {
 .no-display {
     display: none;
 }
+
+main {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+body {
+    background-color: black;
+    color: white;
+}
+
+section {
+    margin: 20px;
+}
+
+button {
+    margin: 20px;
+}
+
+input {
+    margin: 20px;
+}
+
+h1 {
+    text-align: center;
+}
