--- a/public/src/components/app/AuthApp.css
+++ b/public/src/components/app/AuthApp.css
@@ -13,9 +13,12 @@ font-family: 'Nova Flat', cursive; */
     display: none;
 }
 
+
 body {
     color: white;
+    font-family: 'Nova Flat', cursive; 
 }
+
 
 @media only screen and (max-width: 667px) {
 
@@ -33,6 +36,7 @@ body {
     }
     
     main p.switch, main p.errors {
+        font-family: 'Nova Flat', cursive; 
         margin-top: 1em;
         text-align: center;
     }
@@ -58,10 +62,6 @@ body {
         border-radius: 5%;
     }
 
-    html {
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, #31193d 0%, #c779fa 100%);
-    }
 
 }
 
@@ -83,9 +83,11 @@ body {
     main p.switch, main p.errors {
         margin-top: 1em;
         text-align: center;
+        font-family: 'Nova Flat', cursive; 
     }
 
     section, button, input, p {
+        font-family: 'Nova Flat', cursive; 
         margin: 1em;
         text-align: center;
     }
@@ -107,9 +109,5 @@ body {
         border-radius: 5%;
     }
 
-    html {
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, #31193d 0%,  #c779fa 100%);
-    }
 
 }
