--- a/public/src/components/app/AboutApp.css
+++ b/public/src/components/app/AboutApp.css
@@ -1,4 +1,31 @@
+/*
+Display
+font-family: 'Keania One', cursive;
+font-family: 'Monofett', cursive;
+Body
+font-family: 'Nova Flat', cursive; */
 
+html {
+    background: rgb(199,121,250);
+    background: linear-gradient(90deg, rgba(199,121,250,1) 0%, rgba(49,25,61,1) 100%);
+}
+
+h1 {
+    font-family: 'Monofett', cursive;
+    font-size: 3em;
+    text-align: center;
+    letter-spacing: 0.1em;
+    font-size: 72px;
+    background: -webkit-linear-gradient(180deg, rgba(199,121,250,1), rgba(49,25,61,1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+p {
+    font-family: 'Nova Flat', cursive;
+    font-size: 1.5em;
+    text-align: center;
+}
 
 @media only screen and (max-width: 667px) {
     .about {
@@ -6,7 +33,6 @@
         flex-direction: row;
         justify-content: space-around;
         flex-wrap: wrap;
-        border: solid red medium;
         width: 100vw;
     
     }
@@ -15,29 +41,42 @@
         display: flex;
         flex-direction: column;
         margin: 2em;
-        border: solid red medium;
+        padding: .5em;
+        padding-top: 1em;
+        margin: 2em;
         width: 70vw;
         height: 56vh;
+        background-color: black;
+        color: white;
+        border-radius: 7%;
     }
     .people #luke {
         background-color: rgb(151, 3, 3);
-        width: 70vw;
+        width: 65vw;
         height: 35vh;
+        margin: 0px auto;
+        border-radius: 7%;
     }
     .people #jose {
         background-color: rgb(134, 59, 8);
-        width: 70vw;
+        width: 65vw;
         height: 35vh;
+        margin: 0px auto;
+        border-radius: 7%;
     }
     .people #pat {
         background-color: rgb(30, 58, 26);
-        width: 70vw;
+        width: 65vw;
         height: 35vh;
+        margin: 0px auto;
+        border-radius: 7%;
     }
     .people  #maeve {
         background-color: gray;
-        width: 70vw;
+        width: 65vw;
         height: 35vh;
+        margin: 0px auto;
+        border-radius: 7%;
     }
 }
 
@@ -48,8 +87,8 @@
         flex-direction: row;
         justify-content: space-around;
         flex-wrap: wrap;
-        border: solid red medium;
         width: 90vw;
+        margin: auto;
     
     }
     
@@ -57,28 +96,45 @@
         display: flex;
         flex-direction: column;
         margin: 2em;
-        border: solid red medium;
-        width: 30vw;
-        height: 40vh;
+        padding: .5em;
+        padding-top: 1em;
+        width: 22vw;
+        min-width: 300px;
+        height: 35vh;
+        background-color: black;
+        color: white;
+        border-radius: 7%;
     }
     .people #luke {
         background-color: rgb(151, 3, 3);
-        width: 30vw;
+        margin: 0px auto;
+        border-radius: 7%;
+        width: 20vw;
+        min-width: 225px;
         height: 20vh;
     }
     .people #jose {
         background-color: rgb(134, 59, 8);
-        width: 30vw;
+        margin: 0px auto;
+        border-radius: 7%;
+        width: 20vw;
+        min-width: 225px;
         height: 20vh;
     }
     .people #pat {
         background-color: rgb(30, 58, 26);
-        width: 30vw;
+        margin: 0px auto;
+        border-radius: 7%;
+        width: 20vw;
+        min-width: 225px;
         height: 20vh;
     }
     .people  #maeve {
         background-color: gray;
-        width: 30vw;
+        margin: 0px auto;
+        border-radius: 7%;
+        width: 20vw;
+        min-width: 225px;
         height: 20vh;
     }
 }
