--- a/public/src/components/app/UserApp.css
+++ b/public/src/components/app/UserApp.css
@@ -4,15 +4,28 @@ font-family: 'Monofett', cursive;
 Body
 font-family: 'Nova Flat', cursive; */
 
+body {
+    font-family: 'Nova Flat', cursive;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 header {
-    border: red solid medium;
+    border-radius: 15px;
+    letter-spacing: .1em;
+    padding: .5em;
     text-align: center;
+    margin: 2em;
+    width: 30vw;
+    align-self: auto;
+    background-color: black;
+    color: white;
 }
 
 h1 {
     font-family: 'Monofett', cursive;
     font-size: 3em;
-    
 }
 
 main {
@@ -22,7 +35,7 @@ main {
     border-radius: 15px;
 }
 
-section#color-set-1 {
+section {
     margin: auto;
     padding: 1em;
     display: flex;
@@ -33,8 +46,15 @@ section#color-set-1 {
 
 }
 
-section#color-set-1 .col-1 {
+section :first-child {
     border-radius: 15px 0 0 15px;
+} 
+
+section :last-child {
+    border-radius: 0 15px 15px 0;
+}
+
+section#color-set-1 .col-1 {
     flex-grow: 1;
     background-color: purple;
 }
@@ -55,7 +75,57 @@ section#color-set-1 .col-5 {
     background-color: orange;
 }
 section#color-set-1 .col-6 {
-    border-radius: 0 15px 15px 0;
     flex-grow: 1;
     background-color: red;
+}
+
+
+section#color-set-2 .col-1 {
+    flex-grow: 1;
+    background-color: purple;
+}
+section#color-set-2 .col-2 {
+    flex-grow: 1;
+    background-color: blue;
+}
+section#color-set-2 .col-3 {
+    flex-grow: 1;
+    background-color: green;
+}
+section#color-set-2 .col-4 {
+    flex-grow: 1;
+    background-color: yellow;
+}
+section#color-set-2 .col-5 {
+    flex-grow: 1;
+    background-color: orange;
+}
+
+section#color-set-3 .col-1 {
+    flex-grow: 1;
+    background-color: purple;
+}
+section#color-set-3 .col-2 {
+    flex-grow: 1;
+    background-color: blue;
+}
+section#color-set-3 .col-3 {
+    flex-grow: 1;
+    background-color: green;
+}
+section#color-set-3 .col-4 {
+    flex-grow: 1;
+    background-color: yellow;
+}
+section#color-set-3 .col-5 {
+    flex-grow: 1;
+    background-color: orange;
+}
+section#color-set-3 .col-6 {
+    flex-grow: 1;
+    background-color: red;
+}
+section#color-set-3 .col-7 {
+    flex-grow: 1;
+    background-color: purple;
 }
