--- a/public/src/components/app/UserApp.css
+++ b/public/src/components/app/UserApp.css
@@ -9,6 +9,7 @@ font-family: 'Nova Flat', cursive; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 header {
@@ -33,6 +34,54 @@ main {
     width: 90vw;
     background-color: black;
     border-radius: 15px;
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+
+footer {
+    background-color: black;
+    margin: 2em;
+    padding: 1em;
+    border-radius: 15px;
+    width: 20vw;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+a {
+    text-decoration: none;
+    height: 3.8rem;
+    width: 4rem;
+    font-size: 3rem;
+    color: white;
+    background-color: transparent;
+    border: none;
+    margin-top: .1em;
+    transition: all .2s ease-in-out;
+}
+
+a:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+}
+
+.log-out {
+    background-image: url(../../../assets/door.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    text-decoration: none;
+    height: 4rem;
+    width: 4rem;
+    background-position: 50% 55%;
+    border: black;
+    background-color: transparent;
+    transition: all .2s ease-in-out;
+}
+
+.log-out:hover {
+    cursor: pointer;
+    transform: scale(1.3);
 }
 
 section {
@@ -44,6 +93,10 @@ section {
     height: 5vh;
     width: 80vw;
 
+}
+
+::-webkit-scrollbar {
+    width: 0;
 }
 
 section :first-child {
