--- a/public/src/components/game/Gameplay.css
+++ b/public/src/components/game/Gameplay.css
@@ -20,10 +20,10 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-duration: 3s;
-    animation-name: winbannerDrop;
+    /* animation-name: winbannerDrop;
     animation-iteration-count: 1;
     animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    animation-duration: .5s;
+    animation-duration: .5s; */
 }
 
 @keyframes move-gradient {
