--- a/public/src/components/app/UserApp.css
+++ b/public/src/components/app/UserApp.css
@@ -107,3 +107,15 @@ section :last-child {
     border-radius: 0 15px 15px 0;
 }
 
+@media only screen and (max-width: 667px) {
+header {
+    width: 80vw;
+}
+
+.log-out {
+    min-width: 4em;
+}
+footer {
+    width: 60vw;
+}
+}
